Forge Beta: 7-31-2015 ver 1.5.42


14927 cards in total.


-------------
Release Notes
-------------


- Magic Origins -
Forge now includes many of the new Magic Origins cards. It may take a few days/weeks before these new card pictures become available for downloading via the "Download LQ Card Pictures" button. The LQ set pictures tend to take a few more weeks/months to process before they become available for downloading via the "Download LQ Set Pictures" button. Please be patient. The Forge devs are not involved in maintaining the servers that house these pictures.


- Special Quest Booster Packs -
New booster packs have been added to quest mode that contain cards of a single
color. Blue Booster Packs will contain only blue cards, White Booster Packs
will contain only white cards, and so on. There's a pack for each color and
these new packs can be disabled by setting the "Special Boosters" quest
preference to "0". Special thanks to "P for Pizza" for the booster pack images!


- Network play (BETA) -
This version of Forge includes a preliminary version of peer-to-peer (P2P)
network support. If one player hosts, other players can connect to that
player's machine by filling out the corresponding IP address and port number
(default 36743), provided the lobby contains one or more open player slots.
Do not expect network support to work reliably yet, any bug reports or other
comments are welcome!


------------
Known Issues
------------

- Dragon Presence cards from DTK -
Work has started on the Dragon Presence cards. These cards should typically work on their own merits, but a few corner cases dealing with copying/cloning may not work as expected. As these cases are fairly limited, it was decided to add these cards for people to be able to use.

- Dragons of Tarkir -